[package]
name = "aggregate-map"
version = "1.0.0"
edition = "2021"
license = "Unlicense"
description = "Collect key-values pairs into a mapping from keys to collections of values."
repository = "https://github.com/junbl/aggregate-map"


[features]
default = ["hashmap"]
hashmap = []
btreemap = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
